--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>text
+    <title>主页
     </title>
 
 <body>
-<a href>="https://github.com/" target="_blank">github</a>
-
+    <h1>欢迎访问个人主页 </h1>
+<a href="https://github.com/" target="_blank">github</a>
+    <br>
+<a href="https://phiscalx.github.io/nihao/" target> 学英语</a>
 </body>
