--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <h1>欢迎访问个人主页 </h1>
 <a href="https://github.com/" target="_blank">github</a>
     <br>
-<a href="https://phiscalx.github.io/nihao/" target> 学英语</a>
+<a href="https://phiscalx.github.io/nihao/English.html" target="_blank"> 学英语</a>
 </body>
