--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>主页
     </title>
-
+<style>
+    h1 {
+        text-align: center;
+    }
+</style>
 <body>
     <h1>欢迎访问个人主页 </h1>
 <a href="https://github.com/" target="_blank">github</a>
     <br>
 <a href="https://phiscalx.github.io/nihao/English.html" target="_blank"> 学英语</a>
+<br>
+<a href="https://phiscalx.github.io/nihao/caipu.html">菜谱</a>
+<p style="text-align: center; color: brown;">赤团开时斜飞去，最不安神晴又复雨
+    <br>
+    逗留采血色，伴君眠花房
+    <br>
+    无可奈何燃花作香， 幽蝶能留一缕芳</p>
 </body>
+
