--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
     逗留采血色，伴君眠花房
     <br>
     无可奈何燃花作香， 幽蝶能留一缕芳</p>
+    <br>
+   <audio scr="https://phiscalx.github.io/resouce/"> </audio>
 </body>
 
