--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <br>
     无可奈何燃花作香， 幽蝶能留一缕芳</p>
     <br>
-   <audio scr="https://phiscalx.github.io/resouce/"> </audio>
+    <br>
+    <h3>飞鸟集</h3>
+    <audio src="https://phiscalx.github.io/resouce/001-030.mp3" controls autoplay></audio>
+    <h3>致敬伟大发明</h3>
+    <img src="https://phiscalx.github.io/resouce/starship.jpg" alt="" width="500">
+  
 </body>
 
