--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     h1 {
         text-align: center;
     }
+    a {
+        font-size: large;
+        color: black;
+    }
 </style>
 <body>
     <h1>欢迎访问个人主页 </h1>
